--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Week 5 Assignment</title>
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
-  <body>
-    <h1>Week 5 Assignment - Part 2</h1>
+  <header class="center">
+    <h1>Week 5 Assignment</h1>
+    <h2>Victor Lees's Record Shop</h2>
+  </header>
+  <main class="info">
     <p>See console for output.</p>
+  </main>
+  
+  <body>   
     <!-- Create an unordered list with any questions you have -->
   </body>
 </html>
