Updated relative path for image

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Week 5 Assignment</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <title>Week 5 Assignment Part2</title>
+    <link rel="stylesheet" href="styles/stylesheet.css">
   </head>
   <header class="center">
-    <h1>Week 5 Assignment</h1>
+    <h1>Week 5 Assignment Part2</h1>
     <h2>Victor Lees's Record Shop</h2>
   </header>
   <main class="info">
